# branthebuilder

./: .gitignore  .readthedocs.yml  CITATION.cff  README.md  pyproject.toml  tasks.py
.github/workflows/: compatibility_test.yml  test.yml  twine_release.yml
branthebuilder/: __init__.py  __main__.py  django.py  docs.py  main.py  misc.py  namespace.py  release.py  sonar.py  test.py  vars.py
branthebuilder/tests/: test_import.py  test_init.py  test_integration.py
coverage/: report.md
docs/: api.md  conf.py  current_release.rst  index.rst  release_notes.md
docs/api/: branthebuilder.html  index.html  search.js
docs/api/branthebuilder/: main.html  nb_scripts.html  vars.html
docs/notebooks/: doc-000-intro.rst
docs/release_notes/: v2.0.12.rst  v3.0.0.rst  v4.0.0.rst  v4.1.0.rst
docs_config/: current_release.rst
docs_config/release_notes/: v0.0.1.rst
notebooks/: doc-000-intro.ipynb  doc-001-quickstart.ipynb
