[project]
name = "branthebuilder"
description = "Python package management"
dynamic = ["version"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["branthebuilder[test]"]
doc = ["branthebuilder[doc]"]

[project.urls]
Homepage = "https://github.com/endremborza/branthebuilder"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "branthebuilder/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
