[project]
name = "branthebuilder"
dynamic = ["version"]
description = "Python package management"
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "ruff",
    "cookiecutter",
    "pyyaml",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/endremborza/branthebuilder"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "branthebuilder/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]

[project.scripts]
branb = "branthebuilder:app"
